Refactor ExportDialogController: simplify context creation and streamline UI logic Fix SonarLint errors/warnings.
Signed-off-by: Vest <Vest@users.noreply.github.com>