@@ -27,9 +27,6 @@ import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.Spliterators;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import javax.swing.JCheckBox;
 
@@ -68,6 +65,8 @@ import org.apache.commons.lang3.StringUtils;
  */
 public class ExportDialogController
 {
+	private static final String EXPORT_DIALOG_CONTEXT = "ExportDialog";
+
 	@FXML
 	private ComboBox<CharacterFacade> selectCharacterBox;
 	@FXML
@@ -145,7 +144,7 @@ public class ExportDialogController
 		}
 		else
 		{
-			PropertyContext context = UIPropertyContext.createContext("ExportDialog");
+			PropertyContext context = UIPropertyContext.createContext(EXPORT_DIALOG_CONTEXT);
 			context.setProperty(HTML_EXPORT_DIR_PROP, outFile.getParent());
 			SettingsHandler.setSelectedPartyHTMLOutputSheet(templateAsFile.getAbsolutePath());
 			BatchExporter.exportPartyToNonPDF(party, outFile, templateAsFile);
@@ -284,14 +283,7 @@ public class ExportDialogController
 		                    final Boolean newValue)
 		{
 			templateSelect.getSelectionModel().clearSelection();
-			if (newValue == true)
-			{
-				selectCharacterBox.setDisable(true);
-			}
-			else
-			{
-				selectCharacterBox.setDisable(false);
-			}
+			selectCharacterBox.setDisable(newValue);
 			refreshFiles(exportSheetType.getSelectionModel().getSelectedItem(), entireParty.isSelected());
 		}
 	}
@@ -303,20 +295,14 @@ public class ExportDialogController
 		                    final URI oldValue,
 		                    final URI newValue)
 		{
-			if (newValue != null)
-			{
-				doExport.setDisable(false);
-			} else
-			{
-				doExport.setDisable(true);
-			}
+			doExport.setDisable(newValue == null);
 		}
 	}
 
 	private void refreshFiles(ExportUtilities.SheetFilter sheetFilter, boolean exportParty)
 	{
 		URI[] validFiles = ExportUtilities.getValidFiles(allTemplates, sheetFilter, exportParty);
-		List<URI> validFilesAsList = Arrays.stream(validFiles).collect(Collectors.toList());
+		List<URI> validFilesAsList = Arrays.stream(validFiles).toList();
 		ObservableList<URI> observableTemplates = FXCollections.observableList(validFilesAsList);
 		templateSelect.itemsProperty().setValue(observableTemplates);
 	}
@@ -328,7 +314,7 @@ public class ExportDialogController
 		                    final ExportUtilities.SheetFilter oldValue,
 		                    final ExportUtilities.SheetFilter newValue)
 		{
-			PropertyContext context = UIPropertyContext.createContext("ExportDialog");
+			PropertyContext context = UIPropertyContext.createContext(EXPORT_DIALOG_CONTEXT);
 			context.setProperty(UIPropertyContext.DEFAULT_OS_TYPE,
 				exportSheetType.getSelectionModel().getSelectedItem().toString());
 			refreshFiles(newValue, entireParty.isSelected());
@@ -346,21 +332,19 @@ public class ExportDialogController
 	void initialize()
 	{
 		PartyFacade characters = CharacterManager.getCharacters();
-		List<CharacterFacade> characterList = StreamSupport
-				.stream(Spliterators.spliteratorUnknownSize(characters.iterator(), 0), false)
-				.toList();
-		ObservableList<CharacterFacade> observableList = FXCollections.observableList(characterList);
+		ObservableList<CharacterFacade> observableList = FXCollections.observableArrayList();
+		characters.forEach(observableList::add);
 		selectCharacterBox.setItems(observableList);
 		// todo: maybe select "current" character pcgenFrame.getSelectedCharacterRef() ???
 		selectCharacterBox.getSelectionModel().select(0);
 		entireParty.selectedProperty().addListener(new PartyCheckboxChangeListener());
 		templateSelect.getSelectionModel().selectedItemProperty().addListener(new TemplateSelectionListener());
 		List<ExportUtilities.SheetFilter> sheetFilterValues = Arrays.stream(
-				ExportUtilities.SheetFilter.values()).collect(Collectors.toList());
+				ExportUtilities.SheetFilter.values()).toList();
 		exportSheetType.setItems(FXCollections.observableList(sheetFilterValues));
 		exportSheetType.getSelectionModel().selectedItemProperty().addListener(new ExportSheetTypeSelectionListener());
 		exportSheetType.getSelectionModel().select(0);
-		PropertyContext context = UIPropertyContext.createContext("ExportDialog");
+		PropertyContext context = UIPropertyContext.createContext(EXPORT_DIALOG_CONTEXT);
 		String defaultOSType = context.getProperty(UIPropertyContext.DEFAULT_OS_TYPE);
 		if (defaultOSType != null)
 		{
